# brc-website

./: .coverage  Dockerfile  forms.py  pyproject.toml  website.py
.github/workflows/: main.yml
static/: styles.css
static/script/: script.js
templates/: home.html
tests/: conftest.py
tests/unit_tests/: test_urls.py
